fix stretching of page

--- a/ui/src/App.m.scss
+++ b/ui/src/App.m.scss
@@ -1,20 +1,11 @@
 .container {
-    position: relative;
-    max-width: 1920px;
-    height: 100vh;
+    max-width: 2560px;
+    min-height: 100vh;
     margin: 0 auto;
     background-color: #FAFAFA;
-    z-index: 0;
+    z-index: -1;
+    box-sizing: border-box;
+    padding: 0;
 
-    &::before {
-        background-image: linear-gradient(to left, rgba(113, 165, 251, 0.8) 0%, rgba(184, 97, 238, 0.75) 100%), url('assets/mountains.jpg');
-        content: '';
-        background-size: cover;
-        background-position: center;
-        position: absolute;
-        top: 0;
-        width: 100%;
-        height: 300px;
-        z-index: -1;
-    }
+
 }
