--- a/ui/src/modules/pages/Todo/Todo.m.scss
+++ b/ui/src/modules/pages/Todo/Todo.m.scss
@@ -1,9 +1,20 @@
 @import 'styles/variables.scss';
 
 .content {
-    padding: 20px;
     position: relative;
     z-index: 1;
+
+    &::before {
+        background-image: linear-gradient(to left, rgba(113, 165, 251, 0.8) 0%, rgba(184, 97, 238, 0.75) 100%), url('assets/mountains.jpg');
+        content: '';
+        background-size: cover;
+        background-position: center;
+        position: absolute;
+        top: 0;
+        width: 100%;
+        height: 300px;
+        z-index: -1;
+    }
 }
 
 .todoContent {
@@ -12,5 +23,4 @@
     height: 100%;
     width: 400px;
     margin: 0 auto;
-    margin-top: 50px;
 }
